--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="mughader_close_icon" onclick="closeSidebar()">&times;</span>
             <ul>
                 <li><a href="#home">الصفحة الرئيسية</a></li>
-                <li><a href="#about_us_section_id">من نحن؟</a></li>
+                <li><a href="#about_us_section_id" onclick="toggleSidebar()">من نحن؟</a></li>
             </ul>
         </div>
         <div class="mughader_sidebar_overlay" id="mughader_sidebar_overlay" onclick="closeSidebar()"></div>
