--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <title>شركة عطلة صيف</title>
+    <title>شركة عطلة صيف للسفر والسياحة</title>
 
     <!-- ionicons Library -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
