--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h1 class="mughader_animate_on_scroll" title="مكتب سياحي - مغادر"
             style="font-weight: bolder; font-size: 2vmax;">من نحن</h1>
         <p class="mughader_animate_on_scroll">شركة عطلة صيف للسفر والسياحة</p>
-        <p class="mughader_animate_on_scroll">شركة سياحية مقرها مملكة البحرين</p>
+        <p class="mughader_animate_on_scroll">شركة سياحية مقرها المملكة العربية السعودية</p>
         <p class="mughader_animate_on_scroll">أستطاعت الشركة الحصول على شعبية واسعة بسبب مصداقيتها وتميزها بتقديم
             الخدمات واجمل البرامج السياحية حول العالم</p>
         <p class="mughader_animate_on_scroll">نقدم خدماتنا في عدة دول منها:</p>
